--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Holiday - About</title>
+  <title>EssoTravel - Our Team</title>
 <!--
-Holiday Template
+EssoTravel Template
 http://www.templatemo.com/tm-475-holiday
 -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
@@ -30,7 +30,7 @@ http://www.templatemo.com/tm-475-holiday
   		<div class="container">
   			<div class="row">
   				<div class="col-lg-6 col-md-4 col-sm-3 tm-site-name-container">
-  					<a href="#" class="tm-site-name">Holiday</a>	
+  					<a href="#" class="tm-site-name">EssoTravel</a>	
   				</div>
 	  			<div class="col-lg-6 col-md-8 col-sm-9">
 	  				<div class="mobile-menu-icon">
@@ -39,8 +39,8 @@ http://www.templatemo.com/tm-475-holiday
 	  				<nav class="tm-nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html" class="active">About</a></li>
-							<li><a href="tours.html">Our Tours</a></li>
+							<li><a href="about.html" class="active">Our Team</a></li>
+							<li><a href="tours.html">Our Hotels</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>		
@@ -56,27 +56,26 @@ http://www.templatemo.com/tm-475-holiday
 		  <ul class="slides">
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title"><span class="tm-yellow-text">Tour</span> Packages</h1>
-					<p class="tm-banner-subtitle">For Your Vacations</p>
-					<a href="#more" class="tm-banner-link">Learn More</a>	
+					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">Your Next</span> Home</h1>
+					<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
+					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
-		      <img src="img/banner-3.jpg" />
+				<img src="img/04.jpg" alt="Image" />	
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Lorem <span class="tm-yellow-text">Ipsum</span> Dolor</h1>
-					<p class="tm-banner-subtitle">Wonderful Destinations</p>
-					<a href="#more" class="tm-banner-link">Learn More</a>	
+					<h1 class="tm-banner-title"><span class="tm-yellow-text">Cities</h1>
+					<p class="tm-banner-subtitle">Our Wonderful Destinations</p>
+					<a href="#more" class="tm-banner-link">Learn more</a>	
 				</div>
-		      <img src="img/banner-2.jpg" />
+		                <img src="img/banner-2.jpg" alt="Image" />
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title">Proin <span class="tm-yellow-text">Gravida</span> Nibhvell</h1>
-					<p class="tm-banner-subtitle">Velit Auctor</p>
-					<a href="#more" class="tm-banner-link">Learn More</a>	
+				    <h1 class="tm-banner-title"><span class="tm-yellow-text">Book </span> Your Stay</h1>
+					<a href="#more" class="tm-banner-link">Book Now</a>	
 				</div>
-		      <img src="img/banner-1.jpg" />
+		                <img src="img/banner-3.jpg" alt="Image" />
 		    </li>
 		  </ul>
 		</div>		
@@ -91,10 +90,9 @@ http://www.templatemo.com/tm-475-holiday
 			    <li>
 			      <img src="img/about-1.jpg" alt="image" />
 			      <div class="flex-caption">
-			      	<h2 class="slider-title">Welcome To Holiday</h2>
-			      	<h3 class="slider-subtitle">Gravida nibh vel velit auctor aliquet enean sollicitudin lorem quis auctor</h3>
-			      	<p class="slider-description">Holiday is free Bootstrap v3.3.5 responsive template for tour and travel websites. You can download and use this layout for any purpose. You do not need to provide a credit link to us. If you have any question, feel free to contact us. <br><br>
-                    Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum.</p>
+			      	<h2 class="slider-title">Welcome To EssoTravel</h2>
+			      	<h3 class="slider-subtitle">Your reference for the best stay in India</h3>
+			      	<p class="slider-description">EssoTravel is good my friend. Believe it or not, you have to use our services... NO WAY HOME.</p>
 			      	<div class="slider-social">
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -107,9 +105,8 @@ http://www.templatemo.com/tm-475-holiday
 			      <img src="img/about-1.jpg" alt="image" />
 			      <div class="flex-caption">
 			      	<h2 class="slider-title">Thank you for choosing us!</h2>
-			      	<h3 class="slider-subtitle">Gravida nibh vel velit auctor aliquet enean sollicitudin lorem quis auctor, nisi elit consequat ipsum</h3>
-			      	<p class="slider-description">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.<br><br>
-                    Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris gestas quam, ut aliquam massa nisi.</p>
+			      	<h3 class="slider-subtitle">Your reference for the best stay in India</h3>
+			      	<p class="slider-description">View our team bellow.</p>
 			      	<div class="slider-social">
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -122,9 +119,9 @@ http://www.templatemo.com/tm-475-holiday
 			      <img src="img/about-1.jpg" alt="image" />
 			      <div class="flex-caption">
 			      	<h2 class="slider-title">More Programs to come</h2>
-			      	<h3 class="slider-subtitle">Gravida nibh vel velit auctor aliquet enean sollicitudin lorem quis auctor, nisi elit consequat ipsum</h3>
-			      	<p class="slider-description">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris gestas quam, ut aliquam massa nisi.</p>
-			      	<div class="slider-social">
+			      	<h3 class="slider-subtitle">Your reference for the best stay in India</h3>
+				<p class="slider-description">We bring you the best, and we challenge our limits.</p>
+				<div class="slider-social">
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-pinterest"></i></a>
@@ -135,9 +132,9 @@ http://www.templatemo.com/tm-475-holiday
 			    <li>
 			      <img src="img/about-1.jpg" alt="image" />
 			      <div class="flex-caption">
-			      	<h2 class="slider-title">Tour and Travel</h2>
-			      	<h3 class="slider-subtitle">Gravida nibh vel velit auctor aliquet enean sollicitudin lorem quis auctor, nisi elit consequat ipsum</h3>
-			      	<p class="slider-description">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris gestas quam, ut aliquam massa nisi.</p>
+			      	<h2 class="slider-title">Tour and Visit</h2>
+			      	<h3 class="slider-subtitle">Your reference for the best stay in India</h3>
+			      	<p class="slider-description">Make our beautiful hotels your next stay, for an amazing experience.</p>
 			      	<div class="slider-social">
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 			      		<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -162,8 +159,8 @@ http://www.templatemo.com/tm-475-holiday
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-4.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Thomas <span>( Founder )</span></h3>
-						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+						<h3 class="tm-about-box-1-title">Shivani <span>( Founder & Executive Director )</span></h3>
+						<p class="margin-bottom-15 gray-text">@AshokaUniversity - Computer Science.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 							<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -175,8 +172,8 @@ http://www.templatemo.com/tm-475-holiday
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-5.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Keith <span>( Co-Founder )</span></h3>
-						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+						<h3 class="tm-about-box-1-title">Apollinaire <span>( Project Manager & Analyst )</span></h3>
+						<p class="margin-bottom-15 gray-text">@AshokaUniversity - Mathematics.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 							<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -188,21 +185,8 @@ http://www.templatemo.com/tm-475-holiday
 				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<div class="tm-about-box-1">
 						<a href="#"><img src="img/about-6.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">John <span>( General Manager )</span></h3>
-						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
-						<div class="gray-text">
-							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
-							<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="tm-social-icon"><i class="fa fa-pinterest"></i></a>
-							<a href="#" class="tm-social-icon"><i class="fa fa-google-plus"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-					<div class="tm-about-box-1">
-						<a href="#"><img src="img/about-7.jpg" alt="img" class="tm-about-box-1-img"></a>
-						<h3 class="tm-about-box-1-title">Smith <span>( Manager )</span></h3>
-						<p class="margin-bottom-15 gray-text">Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+						<h3 class="tm-about-box-1-title"> Ritwik <span>( Financial Advisor )</span></h3>
+						<p class="margin-bottom-15 gray-text">@AshokaUniversity - Economics.</p>
 						<div class="gray-text">
 							<a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
 							<a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
@@ -232,17 +216,17 @@ http://www.templatemo.com/tm-475-holiday
 						<div class="tm-about-box-2 margin-bottom-30">
 							<img src="img/about-2.jpg" alt="image" class="tm-about-box-2-img">
 							<div class="tm-about-box-2-text">
-								<h3 class="tm-about-box-2-title">Gravida Nibh Vel Velit Auctor Aliquet Etiam</h3>
-				                <p class="tm-about-box-2-description gray-text">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis.</p>
-				                <p class="tm-about-box-2-footer">Mauris In Erat Justo</p>	
+								<h3 class="tm-about-box-2-title">Hotel Booking</h3>
+				                <p class="tm-about-box-2-description gray-text">Book with us, fast and reliable.</p>
+				                <p class="tm-about-box-2-footer">Best Life</p>	
 							</div>		                
 						</div>
 						<div class="tm-about-box-2">
 							<img src="img/about-3.jpg" alt="image" class="tm-about-box-2-img">
 							<div class="tm-about-box-2-text">
-								<h3 class="tm-about-box-2-title">Sed Non Mauris Vitae Erat Con Ruat Nostra</h3>
-				                <p class="tm-about-box-2-description gray-text">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis.</p>
-				                <p class="tm-about-box-2-footer">Sednon Mauris Vitae</p>	
+								<h3 class="tm-about-box-2-title">No Restriction & Best Facilities</h3>
+				                <p class="tm-about-box-2-description gray-text">Define your own stay and enjoy the most luxuruous facilities. We serve you the best. Because we want to.</p>
+				                <p class="tm-about-box-2-footer">El Dorado</p>	
 							</div>		                
 						</div>
 					</div>
@@ -250,16 +234,16 @@ http://www.templatemo.com/tm-475-holiday
 						<h3 class="tm-testimonials-title">Testimonials</h3>
 						<div class="tm-testimonials-content">
 							<div class="tm-testimonial">
-								<p>"Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum."</p>
-		                		<strong class="text-uppercase">John Smith</strong>	
+								<p>"Luxury at its finnest. All I expected and more. Thank you."</p>
+		                		<strong class="text-uppercase">Vedika Kalra</strong>	
 							</div>
 							<div class="tm-testimonial">
-								<p>"Nisi elit consequat ipsum, nec sagittis sem nibh id elit duis sed odio sit amet nibh."</p>
-			                	<strong class="text-uppercase">Lorens</strong>		
+								<p>"Humble reception. I booked my stays 5 times with EssoTravel, and my family enjoyed our vacations."</p>
+			                	<strong class="text-uppercase">Choco The Dog</strong>		
 							</div>
 	       					<div class="tm-testimonial">
-	       						<p>"Rulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio."<p>
-	                			<strong class="text-uppercase">Robert</strong>
+	       						<p>"Governments suck. Fuck this shit man. Enjoying a tax-free and space-like experience with EssoTravels."<p>
+	                			<strong class="text-uppercase">Bertrand K.</strong>
 	       					</div>                	
 						</div>
 					</div>	
@@ -270,10 +254,7 @@ http://www.templatemo.com/tm-475-holiday
 	<footer class="tm-black-bg">
 		<div class="container">
 			<div class="row">
-				<p class="tm-copyright-text">Copyright &copy; 2084 Your Company Name 
-                
-                | Designed by templatemo</p>
-			</div>
+				<p class="tm-copyright-text"> Designed by Apo:)</p>
 		</div>		
 	</footer>
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>      		<!-- jQuery -->
