--- a/tours.html
+++ b/tours.html
@@ -169,105 +169,65 @@ http://www.templatemo.com/tm-475-holiday
 				</div>				
 			</div>
 		</div>
-	
 		<div class="section-margin-top">
+			<div class="section-margin-top">
 			<div class="row">				
 				<div class="tm-section-header">
 					<div class="col-lg-3 col-md-3 col-sm-3"><hr></div>
-					<div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title">Our Hotels</h2></div>
+					<div class="col-lg-6 col-md-6 col-sm-6"><h2 class="tm-section-title">Popular Hotels</h2></div>
 					<div class="col-lg-3 col-md-3 col-sm-3"><hr></div>	
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-03.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">28 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2">						
+						<img src="img/index-03.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 1, in Chennaid</h3>
+						<p class="tm-date">01 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 8 days
-							</div>
-							<a href="#" class="tm-tours-box-1-link-right">
-								$2,200								
-							</a>							
-						</div>
-					</div>					
+					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-04.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">26 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2">						
+					    <img src="img/index-04.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 2, in Jaipur</h3>
+						<p class="tm-date">02 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 9 days
-							</div>
-							<a href="#" class="tm-tours-box-1-link-right">
-								$1,800								
-							</a>							
-						</div>
-					</div>					
+					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-05.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">24 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2">						
+					    <img src="img/index-05.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 3, in Noida</h3>
+						<p class="tm-date">02 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 8 days
-							</div>
-							<a href="#" class="tm-tours-box-1-link-right">
-								$1,600								
-							</a>							
-						</div>
-					</div>					
+					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<div class="tm-tours-box-1">
-						<img src="img/tours-06.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-1-info">
-							<div class="tm-tours-box-1-info-left">
-								<p class="text-uppercase margin-bottom-20">Proin Gravida Nibhvel Lorem Quis Bind</p>	
-								<p class="gray-text">22 March 2084</p>
-							</div>
-							<div class="tm-tours-box-1-info-right">
-								<p class="gray-text tours-1-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.</p>	
-							</div>							
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
+					<div class="tm-home-box-2 tm-home-box-2-right">						
+					    <img src="img/index-06.jpg" alt="image" class="img-responsive">
+						<h3>Hotel 4, in Tiruchirappalli</h3>
+						<p class="tm-date">01 January 2022</p>
+						<div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
 						</div>
-						<div class="tm-tours-box-1-link">
-							<div class="tm-tours-box-1-link-left">
-								Duration: 5 days
-							</div>
-							<a href="#" class="tm-tours-box-1-link-right">
-								$1,200								
-							</a>							
-						</div>
-					</div>					
+					</div>
 				</div>
-			</div>		
+			</div>			
 		</div>
 	</section>		
 	
@@ -277,63 +237,70 @@ http://www.templatemo.com/tm-475-holiday
 			<div class="row">
 				<div class="tm-section-header section-margin-top">
 					<div class="col-lg-4 col-md-3 col-sm-3"><hr></div>
-					<div class="col-lg-4 col-md-6 col-sm-6"><h2 class="tm-section-title">Special Packages</h2></div>
+					<div class="col-lg-4 col-md-6 col-sm-6"><h2 class="tm-section-title">Most Visited Places</h2></div>
 					<div class="col-lg-4 col-md-3 col-sm-3"><hr></div>	
-				</div>				
-			</div>
-			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-03.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>28 March 2084</p>	
+				</div>
+				<div class="col-lg-6">
+					<div class="tm-home-box-3">
+						<div class="tm-home-box-3-img-container">
+							<img src="img/index-07.jpg" alt="image" class="img-responsive">	
 						</div>						
-						<a href="#" class="tm-tours-box-2-link">Book Now</a>
+						<div class="tm-home-box-3-info">
+							<p class="tm-home-box-3-description">Chennai sucks lol</p>
+					        <div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description box-3">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+						</div>						
+					</div>					
+			     </div>
+			     <div class="col-lg-6">
+			        <div class="tm-home-box-3">
+						<div class="tm-home-box-3-img-container">
+							<img src="img/index-08.jpg" alt="image" class="img-responsive">	
+						</div>						
+						<div class="tm-home-box-3-info">
+							<p class="tm-home-box-3-description">Jaipur is the city of mangoes. Love mangoes? Yikes I don't</p>
+					        <div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description box-3">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+						</div>						
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-04.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>26 March 2084</p>	
+				<div class="col-lg-6">
+				    <div class="tm-home-box-3">
+						<div class="tm-home-box-3-img-container">
+							<img src="img/index-09.jpg" alt="image" class="img-responsive">	
 						</div>						
-						<a href="#" class="tm-tours-box-2-link">Book Now</a>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-05.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>24 March 2084</p>	
+						<div class="tm-home-box-3-info">
+							<p class="tm-home-box-3-description">Noida is welcoming. Smiling smiley</p>
+					        <div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description box-3">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
 						</div>						
-						<a href="#" class="tm-tours-box-2-link">Book Now</a>
 					</div>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-					<div class="tm-tours-box-2">						
-						<img src="img/index-06.jpg" alt="image" class="img-responsive">
-						<div class="tm-tours-box-2-info">
-							<h3 class="margin-bottom-15">Proin Gravida Nibhvel Lorem Quis Bind</h3>
-							<img src="img/rating.png" alt="image" class="margin-bottom-5">
-							<p>22 March 2084</p>	
+			    </div>
+			    <div class="col-lg-6">
+			        <div class="tm-home-box-3">
+						<div class="tm-home-box-3-img-container">
+							<img src="img/index-10.jpg" alt="image" class="img-responsive">	
 						</div>						
-						<a href="#" class="tm-tours-box-2-link">Book Now</a>
+						<div class="tm-home-box-3-info">
+							<p class="tm-home-box-3-description">Tiruchirappalli is a weird name I swear</p>
+					        <div class="tm-home-box-2-container">
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
+							<a href="#" class="tm-home-box-2-link"><span class="tm-home-box-2-description box-3">Visit</span></a>
+							<a href="#" class="tm-home-box-2-link"><i class="fa fa-edit tm-home-box-2-icon border-left"></i></a>
+						</div>
+						</div>						
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<p class="home-description">Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-					Morbi accumsaipsu m velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat.
-					</p>					
-				</div>
-			</div>	
+			   	</div>
+			</div>		
 		</div>
 	</section>
 	<footer class="tm-black-bg">
