--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@ http://www.templatemo.com/tm-475-holiday
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title"><span class="tm-yellow-text">Cities</h1>
 					<p class="tm-banner-subtitle">Our Wonderful Destinations</p>
-					<a href="#more" class="tm-banner-link">Learn more</a>	
+					<a href="#more" class="tm-banner-link">View All</a>	
 				</div>
-		                <img src="img/banner-2.jpg" alt="Image" />
+		                <img src="img/city01.jpg" alt="Image" />
 		    </li>
 		    <li>
 			    <div class="tm-banner-inner">
 				    <h1 class="tm-banner-title"><span class="tm-yellow-text">Book </span> Your Stay</h1>
 					<a href="#more" class="tm-banner-link">Book Now</a>	
 				</div>
-		                <img src="img/banner-3.jpg" alt="Image" />
+		                <img src="img/ch002.jpg" alt="Image" />
 		    </li>
 		  </ul>
 		</div>	
