--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ http://www.templatemo.com/tm-475-holiday
 
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-center">
-					<img src="img/index-01.jpg" alt="image" class="img-responsive">
+					<img src="img/mu002.jpg" alt="image" class="img-responsive">
 					<a href="#">
 						<div class="tm-green-gradient-bg tm-city-price-container">
-							<span>Hotel 1</span>
+							<span>The Leela, Mumbai</span>
 							<span>Rs 8,600 Per Night </span>
 						</div>	
 					</a>			
@@ -158,10 +158,10 @@ http://www.templatemo.com/tm-475-holiday
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6">
 				<div class="tm-home-box-1 tm-home-box-1-2 tm-home-box-1-right">
-					<img src="img/index-02.jpg" alt="image" class="img-responsive">
+					<img src="img/no003.jpg" alt="image" class="img-responsive">
 					<a href="#">
 						<div class="tm-red-gradient-bg tm-city-price-container">
-							<span>Hotel 2</span>
+							<span>Hous Of Comfort</span>
 							<span>Rs 6,900 Per Night</span>
 						</div>	
 					</a>					
