--- a/index.html
+++ b/index.html
@@ -57,25 +57,10 @@ http://www.templatemo.com/tm-475-holiday
 		    <li>
 			    <div class="tm-banner-inner">
 					<h1 class="tm-banner-title">Find <span class="tm-yellow-text">Your Next</span> Home</h1>
-				    	<p class="tm-banner-subtitle">Live Your Best Days With Us</p>
+				    	<p class="tm-banner-subtitle">Get Instant 30% Reduction on Regular prices on 7+ days stays</p>
 					<a href="#more" class="tm-banner-link">Load Hotels</a>	
 				</div>
 				<img src="img/04.jpg" alt="Image" />	
-		    </li>
-		    <li>
-			    <div class="tm-banner-inner">
-					<h1 class="tm-banner-title"><span class="tm-yellow-text">Cities</h1>
-					<p class="tm-banner-subtitle">Our Wonderful Destinations</p>
-					<a href="#more" class="tm-banner-link">View All</a>	
-				</div>
-		                <img src="img/city01.jpg" alt="Image" />
-		    </li>
-		    <li>
-			    <div class="tm-banner-inner">
-				    <h1 class="tm-banner-title"><span class="tm-yellow-text">Book </span> Your Stay</h1>
-					<a href="#more" class="tm-banner-link">Book Now</a>	
-				</div>
-		                <img src="img/ch002.jpg" alt="Image" />
 		    </li>
 		  </ul>
 		</div>	
